# prebuild

./: .gitignore  .project.env  Build.sh  CMakeLists.txt  README.md  prebuild  prebuild.lua
.cache/clangd/index/: BuildSystem.cpp.F875B8A280EEFE06.idx  BuildSystem.h.5541CC9011F58CB0.idx  Core.h.02B38C9CA6CF9040.idx  Log.cpp.82BE2820FAC30558.idx  Log.h.320F20605D09AE64.idx  Prebuild.cpp.9EF54BB951C1BC21.idx  ansicolor_sink-inl.h.81F30B26ADADA46C.idx  ansicolor_sink.h.CD638B01A1D2902B.idx  backtracer-inl.h.AB37A0AD75C9629A.idx  backtracer.h.EACA286E8FE85090.idx  base.h.D0DE767D393C9E46.idx  circular_q.h.DA090F20EAC607DE.idx  common-inl.h.80FD7A49B150782C.idx  common.h.D4D2F287FEBBDD31.idx  console_globals.h.6785D6FB7704C36B.idx  core.h.D171E9EFAAED0B6B.idx  fmt.h.492DB15D65A6B07A.idx  fmt_helper.h.07F17AD1B54CC3D8.idx  format-inl.h.058BF6B51F60FEF0.idx  format.h.32DD2C036A0A0513.idx  formatter.h.277F67F40FDE7D8E.idx  log_msg-inl.h.6BAC05507334A8C4.idx  log_msg.h.87B203B108914CDE.idx  log_msg_buffer-inl.h.6BF0ED374DE2EEA9.idx  log_msg_buffer.h.921F62BE5F3B0E4C.idx  logger-inl.h.B37DC3089876F2A8.idx  logger.h.68C7D2B3FDE14FCF.idx  mdc.h.0A52FA56774752BF.idx  null_mutex.h.E800D82A6CD6816A.idx  os-inl.h.24BA3600649D73B1.idx  os.h.DF6CD189DF1E17B6.idx  pattern_formatter-inl.h.0F0B2144EE80FFC5.idx  pattern_formatter.h.BE7634765738AED7.idx  pbpch.h.6A8A129CDD396360.idx  periodic_worker-inl.h.3BDE252FAC5EEF6A.idx  periodic_worker.h.0EC6F8160C2E0D79.idx  registry-inl.h.06BC40D8B664C113.idx  registry.h.DC773A6CDC6DD974.idx  sink-inl.h.63F92EDD2BEC05F9.idx  sink.h.FD32F68B9029513B.idx  (+5 more)
Example/: CMakeLists.txt  prebuild  prebuild.lua
Example/EXAMPLELIBRARY/: CMakeLists.txt  prebuild.lua
Example/EXAMPLEPROJECT/: CMakeLists.txt  prebuild.lua
Prebuild-Old/src/: prebuild.cpp
Prebuild-Old/src/Core/: Platform.cpp  Platform.h
Prebuild-Old/src/Platform/CMake/: CMakePlatform.cpp
Prebuild/src/: pbpch.h  prebuild.cpp
Prebuild/src/Core/: Core.h  Platform.cpp  Platform.h  Utils.cpp  Utils.h
Prebuild/src/Platform/CMake/: CMakePlatform.cpp  CMakePlatform.h
Prebuild/src/Platform/CMake-OLD/: CMakePlatform.cpp  CMakePlatform.h
Prebuild/src/Platform/CMake/New/: CMakePlatform.cpp  CMakePlatform.h
Prebuild/src/Prebuild/Core/: BuildSystem.cpp  BuildSystem.h  Core.h  Log.cpp  Log.h  Prebuild.cpp
Prebuild/src/Prebuild/Platform/CMake/: CMakeBuildSystem.cpp  CMakeBuildSystem.h  FileParser.cpp  FileParser.h
docs/: .prebuild.lua.kate-swp  prebuild.lua
docs/external-folder/: prebuild.lua
test/: CMakeLists.txt  prebuild  prebuild.lua
test/Daddy/: CMakeLists.txt  prebuild.lua
test/Daddy/Child/: CMakeLists.txt  prebuild.lua
test/Test-External/: CMakeLists.txt  prebuild.lua
test/Test-External/src/: test_single.c
test/Test-External/src/multiple/: test_multiple.c
test/Test-Multi-Project/: CMakeLists.txt  prebuild.lua
test/Test-Multi-Project/src/: multi.cpp
test/src/test_recurse/: recurse.cpp
test/test/: prebuild.lua
test/test/test/: prebuild.lua
